--- a/assignment/styles/first.css
+++ b/assignment/styles/first.css
@@ -1,5 +1,6 @@
 /*  add your styles below
-    keep all the comments I have provided
+    Keep all the comments I have provided.
+    Where I have commented "keep," DO NOT touch that line!
     */
 
 body {
