completed assignment files

--- a/assignment/styles/ellamey.css
+++ b/assignment/styles/ellamey.css
@@ -29,7 +29,7 @@ Figure {
     
 aside {
    background: #FFFCEC; /* beige */
-    color: #E8623B; /* orange */
+    
 }
 
 footer {
@@ -39,18 +39,18 @@ footer {
 
 
 a:link {
-    color: #FF0000;
+    color: #DDC10F;
 }
 a:visited {
-    color: #00FF00;
+    color: #fff;
 }
 
 a:focus {
-    color: #FF00FF;
+    color: #BB00DD;
 }
 
 a:hover {
-    color: #FF00FF;
+    color: #2600DD;
 }
 
 a:active {
@@ -58,6 +58,25 @@ a:active {
 }
 
 
+footer a:link {
+    color: #D8C525;
+}
+
+footer a:visited {
+    color: #2AD8D8;
+}
+
+footer a:focus {
+    color: #18C7E6;
+}
+
+footer a:hover {
+    color: #2600DD;
+}
+
+footer a:active {
+    color: #18DD00;
+    }
 
 
 
